# think-anywhere-demo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.es.md  README.md  pyproject.toml  requirements.txt
docs/: QUICKSTART.md  RELATED-RESEARCH.md  VISUAL-GUIDE.md  tutorial-advanced.md  tutorial-avanzado.md  tutorial-basic.md  tutorial-basico.md  tutorial-entropia.md  tutorial-entropy.md
examples/: 01_quicksort.py  02_comparison.py  03_api_design.py  04_analysis.py
tests/: test_think_anywhere.py
think_anywhere/: __init__.py  agent.py  entropy.py  models.py  prompts.py
