[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "think-anywhere"
version = "0.1.0"
description = "Dynamic reasoning in LLMs based on entropy detection"
readme = "README.md"
authors = [
    {name = "Dr. Hidden", email = "contact@drhidden.dev"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Code Generators",
]
keywords = ["llm", "reasoning", "entropy", "code-generation", "ai", "machine-learning"]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
]
viz = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/drhidden/think-anywhere"
Documentation = "https://github.com/drhidden/think-anywhere#readme"
Repository = "https://github.com/drhidden/think-anywhere"
"Bug Tracker" = "https://github.com/drhidden/think-anywhere/issues"
Blog = "https://drhidden.github.io"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["think_anywhere*"]
exclude = ["tests*", "examples*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["think_anywhere"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v"
